first css/html commit

--- a/style.css
+++ b/style.css
@@ -244,7 +244,7 @@ footer {
     
     
 }
-.card h4 {
+.card p {
     font-family: "Barlow", sans-serif;
     font-weight: 600;
 }
@@ -495,6 +495,158 @@ footer {
     }
     .card {
         padding-bottom:10px;
+    }
+    .first-page{
+        height: 90vh;
+        background-image: url(../sunnyside-group40/images/desktop/image-header.jpg);
+    }
+    nav h1{
+        font-size: 1.125em;
+    }
+    .first-page-body h1{
+        font-size: 2.35em;
+        text-align: center;
+        letter-spacing: .2em;
+    }
+    .first-page-body img{
+        margin-top: 20px;
+        width: 30px;
+    }
+    .heading{
+        padding-top: 50px;
+    }
+    footer h3{
+        font-size: 15px;
+    }
+    .menu{
+        width: 80%;
+    }
+    footer h2{
+        font-size: 30px;
+        font-weight: 900;
+    }
+    .third-second-half{
+        grid-template-areas: 
+        "milk  orangel"
+        "cone sugar";
+        
+        margin-top: 300px;
+    }
+    #image1{
+        grid-area: cone;
+    }
+    #image2{
+        grid-area: milk;
+    }
+    #image3{
+        grid-area: orangel;
+    }
+    #image4{
+        grid-area: sugar;
+    }
+    .third-second-half .image{
+        background-size: 200px;
+        background-repeat: no-repeat;
+    }
+
+    .card{
+        gap: 15px;
+        padding-top: 20px;
+    }
+    .card img{
+        width: 110px;
+    }
+    .first-half{
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    .first-half .right{
+        height: 400px;
+    }
+    .card p{
+        font-size: 14px; 
+        font-weight: 600; 
+    }
+    .headline{
+        padding: 0;
+    }
+    .headline h1{
+        margin-bottom: 15px;
+        font-size: 14px;
+        font-weight: 900;
+        text-transform: uppercase;
+        letter-spacing: 2.5px;
+    }
+    .testimonials .woman2{
+        padding: 0 14px;
+    }
+    .testimonials .woman1{
+        padding: 0 14px;
+    }
+    .testimonials .boldy{
+        font-size: 14px;
+        font-weight: 900;
+    }
+    .testimonials .smally{
+        font-size: 14px;
+        font-weight: 700;
+    }
+   .third-first-half{
+       margin-top: 40px;
+   }
+    .third-half{
+        display: flex;
+        flex-direction: column;
+    }
+    .third-half .left{
+        flex: 1;
+        background-size: 400px;
+    }
+    .third-half .right{
+        flex: 1;
+    }
+    .third-half .right h2{
+        margin-top: 80px;
+        font-size: 18px;
+        font-weight: 900;
+    }
+    .third-half .right h4{
+        margin-top: 20px;
+        font-size: 12px;
+        font-weight: 600;
+    }
+    .third-half .left h2{
+        margin-top: 80px;
+        font-size: 18px;
+        font-weight: 900;
+    }
+    .third-half .left h4{
+        margin-top: 0px;
+        font-size: 12px;
+        font-weight: 600;
+    }
+    .second-half{
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    .second-half .left{
+        flex: 1;
+        
+    }
+    .second-half .right{
+        flex: 1;
+    }
+    .second-half .left h1{
+        text-align: center;
+        font-size: 18px;
+    }
+    .second-half .left h3{
+        text-align: center;
+    }
+    .second-half .left button{
+        margin-left: auto;
+        margin-right:auto;
+        font-size: 14px;
     }
 
     
