--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding:0;
-    overflow-x: hidden;
+    
     box-sizing: border-box;
 }
 
@@ -134,6 +134,17 @@ footer {
     grid-template-columns: 1fr 1fr ;
 
 }
+.first-half .left{
+    padding: 0 50px 0 180px;
+}
+.first-half .left h1{
+    padding: 0 100px 0 0;
+}
+.first-half .left button{
+    font-size: 18px;
+    font-weight: 900;
+    border-bottom: 2px solid  hsl(51, 100%, 49%);
+}
 
 .left {
     display: flex;
@@ -148,27 +159,29 @@ footer {
 
 .left h1, button {
     font-family: 'Fraunces',sans-serif;
+    color:hsl(212, 27%, 19%);
+    cursor: pointer;
 }
 
 .left h1 {
     font-size:3em;
-    color:hsl(237, 12%, 33%);
+    
 }
 
 .left h3 {
     font-family:'Barlow',sans-serif;
     text-align: start;
-    color:  hsl(240, 6%, 50%);
+    color:  hsl(232, 10%, 55%);
     font-weight: 600;
+    padding: 0 150px 0 0;
 }
 .left button {
     background-color: rgba(0,0,0,0);
     border-width: 0;
     height:30px;
-    border-bottom-width: 2px;
-    border-color: yellow;
-    text-transform: uppercase;
+    text-transform: uppercase;   
 }
+
 
 .right{
     background-image: url("images/desktop/image-transform.jpg");
@@ -182,6 +195,14 @@ footer {
     background-image:url("images/desktop/image-stand-out.jpg");
     background-position:center;
 }
+.second-half .left{
+    padding: 0 140px 0 100px;
+}
+.second-half button{
+    font-size: 18px;
+    font-weight: 900;
+    border-bottom: 2px solid hsl(7, 99%, 70%);
+}
 .third-half .right, .third-half .left {
     background-position: center;
     display: flex;
@@ -194,33 +215,48 @@ footer {
 }
 .third-half .left {
     background-image: url("images/desktop/image-graphic-design.jpg");
-    
+    background-size: cover;
+    color: hsl(167, 40%, 24%);
 }
 .third-second-half {
     height:60vh;
 }
 .third-half .right {
-    color:hsl(240, 10%, 16%);
+    color:hsl(198, 62%, 26%);
     background-image: url("images/desktop/image-photography.jpg");
 }
 
 .third-half h2 {
     font-family:'Fraunces',sans-serif;
-
-    font-size:3em;
+    font-weight: 900;
+    font-size:2em;
 }
-
 .third-half h4 {
     font-family : 'Barlow',sans-serif;
     font-weight: 600;
-
+    
+}
+.third-half .left h2{
+    margin-top: 100px;
+}
+.third-half .right h2{
+    margin-top: 70px
+}
+.third-half .right h4{
+    margin-top: 20px;
 }
 .headline {
-    padding:40px;
+    padding:60px 60px;
     display: flex;
     justify-content: center;
 }
+.headline h1{
+    color: hsl(210, 4%, 67%);
+    letter-spacing: 5px;
+    text-transform: uppercase;
+}
 .testimonials {
+    margin-top: 20px;
     height:50vh;
     display:grid;
     grid-template-columns:repeat(3,1fr);
@@ -247,6 +283,16 @@ footer {
 .card p {
     font-family: "Barlow", sans-serif;
     font-weight: 600;
+    padding: 70px;
+    font-size: 18px;
+}
+.card .boldy{
+    font-weight: 900;
+    font-size: 18px;
+}
+.card .smally{
+    font-size: 16px;
+    font-weight: 700;
 }
 
 .card img {
@@ -255,6 +301,7 @@ footer {
 }
 
 .third-second-half {
+    margin-top: 150px;
     display: grid;
     grid-template-columns: repeat(4,1fr);
 
@@ -270,27 +317,34 @@ footer {
     font-weight:800;
     color:hsl(207, 13%, 34%);
 }
-
 .menu, .socials {
     display: flex;
     margin: auto;
     justify-content: space-between;
 }
 .menu {
-    width: 30%;
+    width: 20%;
     font-family:'Barlow',sans-serif;
     font-weight: 600;
     color:hsl(207, 13%, 34%);
+}
+
+.menu h3{
+    font-weight: 600;
 }
 .socials {
     height:20%;
     width: 10%;
     z-index: 2;
 }
-.socials img:hover, .menu h3:hover, .logo:hover {
+.menu h3:hover, .logo:hover {
+    cursor: pointer;
+    color: white;
+}
+.socials img:hover{
+    background-color: white;
     cursor: pointer;
 }
-
 #navbutton :hover {
     background-color: rgba(255, 255, 255, 0.6);
 
@@ -315,6 +369,14 @@ footer {
     background-image: url("images/desktop/image-gallery-sugarcubes.jpg");
     background-position: center;
     background-size: cover;
+}
+.third-half .left h4{
+    font-size: 18px;
+    padding: 0 200px;
+}
+.third-half .right h4{
+    font-size: 18px;
+    padding: 0 200px;
 }
 
 @media screen and (max-width:1200px) {
