--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding:0;
     overflow-x: visible;
-    overflow-y: visible;
     box-sizing: border-box;
 }
 
@@ -102,19 +101,16 @@ footer {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
-}
-.first-page-body .heading h1{
-    margin-top: 50px;
-    letter-spacing: 20px;
 }
 .first-page-body img {
-    margin-top: 120px;
-    width: 45px;
+    margin-top:80px;
+    width: 40px;
 }
 .first-page-body h1 {
     font-family: 'Fraunces', sans-serif;
     font-size:3em;
+    margin-top: 50px;
+    letter-spacing: 20px;
 
 }
 
@@ -170,7 +166,6 @@ footer {
 
 .left h1 {
     font-size:3em;
-    
 }
 
 .left h3 {
@@ -178,15 +173,13 @@ footer {
     text-align: start;
     color:  hsl(232, 10%, 55%);
     font-weight: 600;
-    padding: 0 150px 0 0;
 }
 .left button {
     background-color: rgba(0,0,0,0);
     border-width: 0;
     height:30px;
-    text-transform: uppercase;   
+    text-transform: uppercase;
 }
-
 
 .right{
     background-image: url("images/desktop/image-transform.jpg");
@@ -201,13 +194,14 @@ footer {
     background-position:center;
 }
 .second-half .left{
-padding: 0 140px 0 100px;
-}
-.second-half button{
-    font-size: 18px;
-    font-weight: 900;
-    border-bottom: 2px solid hsl(7, 99%, 70%);
-}
+    padding: 0 140px 0 100px;
+    }
+    .second-half button{
+        font-size: 18px;
+        font-weight: 900;
+        border-bottom: 2px solid hsl(7, 99%, 70%);
+    }
+
 .third-half .right, .third-half .left {
     background-position: center;
     display: flex;
@@ -222,6 +216,7 @@ padding: 0 140px 0 100px;
     background-image: url("images/desktop/image-graphic-design.jpg");
     background-size: cover;
     color: hsl(167, 40%, 24%);
+    
 }
 .third-second-half {
     height:60vh;
@@ -234,12 +229,13 @@ padding: 0 140px 0 100px;
 .third-half h2 {
     font-family:'Fraunces',sans-serif;
     font-weight: 900;
-    font-size:2em;
+    font-size:3em;
 }
+
 .third-half h4 {
     font-family : 'Barlow',sans-serif;
     font-weight: 600;
-    
+
 }
 .third-half .left h2{
     margin-top: 100px;
@@ -251,7 +247,7 @@ padding: 0 140px 0 100px;
     margin-top: 20px;
 }
 .headline {
-    padding:60px 60px;
+    padding:40px;
     display: flex;
     justify-content: center;
 }
@@ -261,7 +257,6 @@ padding: 0 140px 0 100px;
     text-transform: uppercase;
 }
 .testimonials {
-    margin-top: 20px;
     height:50vh;
     display:grid;
     grid-template-columns:repeat(3,1fr);
@@ -281,7 +276,10 @@ padding: 0 140px 0 100px;
 
 }
 .headline h1{
-    font-family: 'Fraunces',sans-serif;   
+    font-family: 'Fraunces',sans-serif;
+    
+    
+    
 }
 .card p {
     font-family: "Barlow", sans-serif;
@@ -325,6 +323,7 @@ padding: 0 140px 0 100px;
     font-weight:800;
     color:hsl(207, 13%, 34%);
 }
+
 .menu, .socials {
     display: flex;
     margin: auto;
@@ -336,7 +335,6 @@ padding: 0 140px 0 100px;
     font-weight: 600;
     color:hsl(207, 13%, 34%);
 }
-
 .menu h3{
     font-weight: 600;
 }
@@ -345,16 +343,13 @@ padding: 0 140px 0 100px;
     width: 10%;
     z-index: 2;
 }
-.menu h3:hover, .logo:hover {
+.socials img:hover, .menu h3:hover, .logo:hover {
     cursor: pointer;
     color: white;
 }
-.socials img:hover{
-    background-color: white;
-    cursor: pointer;
-}
+
 #navbutton :hover {
-    background-color: rgba(241, 239, 239, 0.6);
+    background-color: rgba(255, 255, 255, 0.6);
 
 }
 
@@ -386,6 +381,7 @@ padding: 0 140px 0 100px;
     font-size: 18px;
     padding: 0 200px;
 }
+
 
 @media screen and (max-width:1200px) {
     nav ul {
@@ -551,15 +547,14 @@ padding: 0 140px 0 100px;
 
 @media screen and (max-width:375px) {
     *{
+        overflow-x: visible;
         overflow-y: visible;
     }
     
-    
     .left {
         font-size:0.6em;
-        gap: 10px;
+        gap: 15px;
         align-items: center;
-
     }
     .right, .second-half .right {
         height:30vh;
@@ -580,10 +575,11 @@ padding: 0 140px 0 100px;
     nav h1{
         font-size: 1.125em;
     }
-    .first-page-body .heading h1{
+    .first-page-body h1{
         font-size: 2.35em;
         text-align: center;
         letter-spacing: .2em;
+        margin-top: 20px;
     }
     .first-page-body img{
         margin-top: 20px;
@@ -621,10 +617,12 @@ padding: 0 140px 0 100px;
     #image4{
         grid-area: sugar;
     }
+    
     .third-second-half .image{
         background-size: 200px;
         background-repeat: no-repeat;
     }
+    
 
     .card{
         gap: 15px;
@@ -633,6 +631,7 @@ padding: 0 140px 0 100px;
     .card img{
         width: 110px;
     }
+    
     .first-half{
         display: flex;
         flex-direction: column-reverse;
@@ -708,49 +707,54 @@ padding: 0 140px 0 100px;
     .second-half{
         display: flex;
         flex-direction: column-reverse;
-        height: 100vh;
     }
     .second-half .left{
         flex: 1;
-        padding: 50px 10px 0 10px;
+        padding: 0 0 10px 0;
+        margin-top: 60px;
+        
     }
     .second-half .right{
         flex: 1;
     }
     .second-half .left h1{
         text-align: center;
-        font-size: 18px;
+        font-size: 25px;
         font-weight: 900;
+        padding: 0 20px 0 20px;
     }
-
     .second-half .left h3{
-        font-size: 13px;
+        font-size: 14px;
         text-align: center;
-        padding: 0;
     }
     .second-half .left button{
         margin-left: auto;
         margin-right:auto;
-        font-size: 13px;
-    } 
+        font-size: 14px;
+    }
     .first-half .left{
-        padding: 0;
+        padding: 0 0 10px 0;
     }
     .first-half .left h1{
-        padding: 0;
+        padding: 0 30px 0 30px;
         font-weight: 900;
-        font-size: 18px;
+        text-align: center;
+        font-size: 25px;
     }
     .first-half .left button{
-        font-size: 13px;
+        font-size: 14px;
     }
     .left h3 {
-        padding: 10px 10px 0 10px;
+        padding: 0px 10px 0 10px;
         font-size: 13px;
         text-align: center;
     }
-
+    .left-side .hamburger-menu{
+        margin-left: 90px;
+    }
+   
     
+
 }
 
 @keyframes popupanimation {
