--- a/style.css
+++ b/style.css
@@ -570,7 +570,7 @@ footer {
     }
     .first-page{
         height: 90vh;
-        background-image: url(../sunnyside-group40/images/desktop/image-header.jpg);
+        background-image: url(images/mobile/image-header.jpg);
     }
     nav h1{
         font-size: 1.125em;
